[gd_scene load_steps=39 format=3 uid="uid://gs11j6xqhown"]

[ext_resource type="Shader" path="res://Shaders/outline_shader.gdshader" id="1_pj7ap"]
[ext_resource type="Script" path="res://Scripts/npc_move.gd" id="1_t732v"]
[ext_resource type="Texture2D" uid="uid://bek2w4aihyppv" path="res://Assets/atlasSheet.png" id="2_2u2kl"]
[ext_resource type="Texture2D" uid="uid://bb00spiof77pt" path="res://Assets/j_walk.png" id="3_bq8dt"]
[ext_resource type="Script" path="res://Scripts/NPC_char.gd" id="3_uf8w7"]
[ext_resource type="Script" path="res://Scripts/highlightable_scene.gd" id="4_bdlvh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5fu2u"]
resource_local_to_scene = true
shader = ExtResource("1_pj7ap")
shader_parameter/outline_color = Color(0.878431, 0.121569, 0.247059, 1)
shader_parameter/is_active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_umudn"]
atlas = ExtResource("3_bq8dt")
region = Rect2(31, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sae5m"]
atlas = ExtResource("3_bq8dt")
region = Rect2(31, 144, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smx6q"]
atlas = ExtResource("3_bq8dt")
region = Rect2(62, 144, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsur0"]
atlas = ExtResource("3_bq8dt")
region = Rect2(93, 144, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw3p5"]
atlas = ExtResource("2_2u2kl")
region = Rect2(128, 0, 32, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo5c0"]
atlas = ExtResource("3_bq8dt")
region = Rect2(0, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5um4"]
atlas = ExtResource("3_bq8dt")
region = Rect2(31, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhbuo"]
atlas = ExtResource("3_bq8dt")
region = Rect2(62, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf3we"]
atlas = ExtResource("3_bq8dt")
region = Rect2(93, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_onesj"]
atlas = ExtResource("3_bq8dt")
region = Rect2(124, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc685"]
atlas = ExtResource("3_bq8dt")
region = Rect2(155, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc70j"]
atlas = ExtResource("3_bq8dt")
region = Rect2(186, 96, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ho6g"]
atlas = ExtResource("3_bq8dt")
region = Rect2(0, 144, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v808l"]
atlas = ExtResource("3_bq8dt")
region = Rect2(31, 0, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pc52"]
atlas = ExtResource("3_bq8dt")
region = Rect2(62, 0, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlo7u"]
atlas = ExtResource("3_bq8dt")
region = Rect2(93, 0, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4yk6"]
atlas = ExtResource("3_bq8dt")
region = Rect2(124, 0, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2e77"]
atlas = ExtResource("3_bq8dt")
region = Rect2(155, 0, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_haeax"]
atlas = ExtResource("3_bq8dt")
region = Rect2(186, 0, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7x5j"]
atlas = ExtResource("3_bq8dt")
region = Rect2(0, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3krj"]
atlas = ExtResource("3_bq8dt")
region = Rect2(31, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pr6j"]
atlas = ExtResource("3_bq8dt")
region = Rect2(62, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d54iw"]
atlas = ExtResource("3_bq8dt")
region = Rect2(93, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhs06"]
atlas = ExtResource("3_bq8dt")
region = Rect2(124, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3c53"]
atlas = ExtResource("3_bq8dt")
region = Rect2(155, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_le8fk"]
atlas = ExtResource("3_bq8dt")
region = Rect2(186, 48, 31, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps4ex"]
atlas = ExtResource("3_bq8dt")
region = Rect2(0, 96, 31, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkhv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_umudn")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sae5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smx6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsur0")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw3p5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo5c0")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_o5um4")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_dhbuo")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_gf3we")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_onesj")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_uc685")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_wc70j")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_6ho6g")
}],
"loop": true,
"name": &"walk_b",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_v808l")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_6pc52")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_mlo7u")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_l4yk6")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_t2e77")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_haeax")
}],
"loop": true,
"name": &"walk_f",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_j7x5j")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_s3krj")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_2pr6j")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_d54iw")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_mhs06")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_x3c53")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_le8fk")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_ps4ex")
}],
"loop": true,
"name": &"walk_s",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgt72"]
size = Vector2(17.5, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_5yg1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjgua"]
size = Vector2(6, 12.125)

[node name="janitor" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_t732v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_5fu2u")
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_kkhv0")
animation = &"idle"
autoplay = "idle"

[node name="NPCChar" type="Node2D" parent="."]
script = ExtResource("3_uf8w7")
portrait_texture = "res://Assets/portraits_sheet5.png"
role_no = 3

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3
avoidance_enabled = true
radius = 32.0
avoidance_layers = 3
avoidance_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, -8)
shape = SubResource("RectangleShape2D_xgt72")

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2(0, -7)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_5yg1p")
debug_color = Color(0.985542, 0, 0.332726, 0.42)

[node name="ClickableArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0
script = ExtResource("4_bdlvh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea"]
position = Vector2(0, -28)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_fjgua")
debug_color = Color(0, 0.639053, 0.37034, 0.42)

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="DetectRadius" to="NPCChar" method="_on_detect_radius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="NPCChar" method="_on_detect_radius_body_exited"]
